# Termlink

./: README.md  package-lock.json  package.json  vite.config.js
.github/workflows/: release.yml
plans/: rdp-feature-plan.md
src/: App.vue  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: download_manager.rs  fs.rs  lib.rs  rdp.rs  sftp_russh.rs  ssh.rs  ssh_command.rs  ssh_terminal_russh.rs  system_monitor.rs  terminal.rs
src/components/: DownloadManager.vue  FileEditor.vue  FileManager.vue  RdpModal.vue  RightPanel.vue  SettingsModal.vue  Sidebar.vue  SshModal.vue  StatusBar.vue  SystemMonitor.vue  TabManager.vue  TagGroupManager.vue  Terminal.vue  TopMenu.vue
src/services/: RdpService.js  SftpService.js  SshService.js  ThemeService.js
