[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.8.5", features = [] }
tauri-plugin-log = { version = "2.6.0", features = ["colored"] }
portable-pty = "0.8"
once_cell = "1.20"
parking_lot = "0.12"
crossbeam-channel = "0.5"
keyring = "2"
directories = "5"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
russh = "0.40"
russh-keys = "0.40"
russh-sftp = "2.0"
async-trait = "0.1"
futures = "0.3"
lazy_static = "1.4"
